--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-backgroundColor="#ECE1A2"
-secondaryBackgroundColor="#ecdcaa"
+backgroundColor="#F5FFFA"
+secondaryBackgroundColor="#228B22"
 textColor="#0e0f10"
-font="serif"
+font="monospace"
 
